# dotfiles

./: README  README.md  Sidney_iTerm.json  _alacritty.yml  _bash_profile  _bashrc  _ghostty_config  _hnfong.conf  _screenrc  _tmux.conf  _vimrc  _zshenv  build_gpg.sh  build_tmux.sh  config.nu  download_check  hello.c  iTerm.json  macos_preferences.sh  optionals.md  setup.sh  zoom.css
_vim/doc/: tags
_vim/ftplugin/: python.vim
_vim/plugin/: vtreeexplorer.vim
_vim/spell/: en.utf-8.add  en.utf-8.add.spl
adhoc_venv/: Makefile  README.md  pyproject.toml  requirements.txt  setup.sh
iTerm2/prefs/: com.googlecode.iterm2.plist
legacy/: convert_iterm_to_rgb.py
nvim/: init.vim  lazy-lock.json
nvim/lua/: init2.lua  keymaps.lua  plugins.lua
nvim/lua/config/: lazy.lua
nvim/spell/: en.utf-8.add  en.utf-8.add.spl
qdpackages/: fq.qdi  gron.qdi  hear.qdi  htmlq.qdi  htop.qdi  node.qdi  nvim.qdi  p7zip.qdi  ripgrep.qdi  unrar.qdi  vlang.qdi  xq.qdi  xz.qdi  zstd.qdi
rusts/: Cargo.toml  Makefile  README.md  charcount_main.rs  pick_main.rs
zsh/: .gitignore  .zpreztorc  .zshenv  .zshrc  README.md
