# Standard template cargo file
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rusty"
version = "0.1.0"
authors = ["Sidney Fong <hnfong@local>"]
edition = "2021"

[dependencies]
rand = "0.8.5"

[[bin]]
name = "pick"
path = "pick_main.rs"
test = false
bench = false

[[bin]]
name = "charcount"
path = "charcount_main.rs"
test = false
bench = false
