# Standard template cargo file
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "dotbins"
version = "0.1.0"
authors = ["Sidney Fong <hnfong@local>"]
edition = "2021"

[dependencies]
rand = "0.8.5"
zilib = { git = "https://github.com/wordshk/zilib", version = "0.1.9", features = ["downloaded_data"] }
